tests/functional/lang/eval-fail-symmetric-lessThan-abort-abort.err.exp
error:
       … while calling the 'lessThan' builtin
         at /pwd/lang/eval-fail-symmetric-lessThan-abort-abort.nix:1:1:
            1| builtins.lessThan (abort "x") (abort "y")
             | ^
            2|

       … while calling the 'abort' builtin
         at /pwd/lang/eval-fail-symmetric-lessThan-abort-abort.nix:1:20:
            1| builtins.lessThan (abort "x") (abort "y")
             |                    ^
            2|

       error: evaluation aborted with the following error message: 'x'
